infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nkoster-moderation
  name: nkoster-moderation
  namespace: nkoster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nkoster-moderation
  template:
    metadata:
      labels:
        app: nkoster-moderation
    spec:
      containers:
      - name: nkoster-moderation
        args:
        - npm
        - start
        image: registry.portavita.net/nkoster/ms1-moderation:0.0.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 4003
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 4003
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nkoster-moderation
  name: nkoster-moderation
  namespace: nkoster
spec:
  ports:
  - name: nkoster-moderation
    port: 80
    protocol: TCP
    targetPort: 4003
  selector:
    app: nkoster-moderation
  type: ClusterIP
