infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nkoster-comments
  name: nkoster-comments
  namespace: nkoster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nkoster-comments
  template:
    metadata:
      labels:
        app: nkoster-comments
    spec:
      containers:
      - name: nkoster-comments
        args:
        - npm
        - start
        image: registry.portavita.net/nkoster/ms1-comments:0.0.7
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 4001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 4001
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nkoster-comments
  name: nkoster-comments
  namespace: nkoster
spec:
  ports:
  - name: nkoster-comments
    port: 80
    protocol: TCP
    targetPort: 4001
  selector:
    app: nkoster-comments
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: nkoster-comments
  name: nkoster-comments
  namespace: nkoster
spec:
  rules:
  - host: nkoster.pvdev.portavita.net
    http:
      paths:
      - backend:
          serviceName: nkoster-comments
          servicePort: 80
        path: /posts
