infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nkoster-query
  name: nkoster-query
  namespace: nkoster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nkoster-query
  template:
    metadata:
      labels:
        app: nkoster-query
    spec:
      containers:
      - name: nkoster-query
        args:
        - npm
        - start
        image: registry.portavita.net/nkoster/ms1-query:0.0.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /posts
            port: 4002
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /posts
            port: 4002
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nkoster-query
  name: nkoster-query
  namespace: nkoster
spec:
  ports:
  - name: nkoster-query
    port: 80
    protocol: TCP
    targetPort: 4002
  selector:
    app: nkoster-query
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: nkoster-query
  name: nkoster-query
  namespace: nkoster
spec:
  rules:
  - host: nkoster.pvdev.portavita.net
    http:
      paths:
      - backend:
          serviceName: nkoster-query
          servicePort: 80
        path: /posts
